2018-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document default calling convention for z80, z180, r2k, r3ka, ez80_z80, tlcs90, stm8.
	* src/SDCCast.c:
	  Fix bug #2850.
	* src/SDCCsymt.c:
	  Fix bug #2797.
	* src/SDCCmain.c,
	  src/mcs51/main.c,
	  src/hc08/main.c,
	  src/stm8/main.c:
	  Fix bug #2809.

2018-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2854.c:
	  Fix read from uninitialized memory.
	* src/z80/peep.c:
	  Handle eZ80 lea, pea in peephole size calculation.

2018-12-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-2854.c: disabled test, segmentation fault
	* configure, configure.ac: fixed help text
	* device/lib/clean.mk: also clean ez80

2018-12-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of eZ80, Rabbit, TLCS-90 16-bit load.

2018-12-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implement RFE #594.

2018-12-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a recently-introduced bug in handling of 32-bit return values for gbz80.

2018-12-18 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c,
	  sdas/asz80/tez80.asm:
	  Improve eZ80 assembler support, patch by Hynek Sladký.

2018-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in wide read via pointer.

2018-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2856.

2018-12-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure, configure.ac: changed warning into notice
	* sdas/asz80/z80mch.c: cosmetic
	* src/sdcc.vcxproj,
	* src/sdcc.vcxproj.filters: added missing SDCC.lex & SDCC.y
	* support/cpp/libcpp/files.c,
	* support/cpp/libcpp/identifiers.c,
	* support/cpp/libcpp/init.c,
	* support/cpp/libcpp/symtab.c: fixed warnings for unsigned size_t
	* support/regression/tests/bitopcse.c: only use idata for mcs51